tests/ifcc-test-output/testfiles-1_03_03_singleline_comment_invalid/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:5: error: ‘comment’ undeclared (first use in this function)
    3 |     comment
      |     ^~~~~~~
input.c:3:5: note: each undeclared identifier is reported only once for each function it appears in
input.c:3:12: error: expected ‘;’ before ‘}’ token
    3 |     comment
      |            ^
      |            ;
    4 | }
      | ~           

return code: 1
